<resources>
    <string name="app_name">E2B</string>
    <string name="fb_id">1314458655285704</string>
    <string name="please_wait">Please wait...</string>
    <string name="enter_email_add">Enter Email Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_header">Forgot Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_via_social">Sign In via Social</string>
    <string name="sign_up">Sign Up</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="enter_name">Enter Name</string>
    <string name="terms_and_condition">
        <u>Terms and Conditions</u>
    </string>
    <string name="sign_up_via_social">Sign Up via Social</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="enter_your_email_address">Enter Your Email Address</string>
    <string name="send">Send</string>
    <string name="we_wiil_send_u_a_link_to_change_ur_password">We will send you a link to change your password.</string>
    <string name="enter_email">Please enter email</string>
    <string name="enter_email_validation">Please enter the valid email-address</string>
    <string name="please_enter_password">Please enter the password</string>
    <string name="please_enter_userName">Please enter the full name</string>
    <string name="privacy_policy_caps">PRIVACY POLICY</string>
    <string name="base_url_terms_n_conditions">https://www.google.co.in/</string>
    <string name="passwordValidation">Password must be 6 or more characters long</string>
    <string name="ok">OK</string>
    <string name="feed">Feed</string>
    <string name="msg_logout">Are you sure want to logout?</string>
    <string name="my_profile">My Profile</string>
    <string name="preference">Preferences</string>
    <string name="logout">Logout</string>
    <string name="feeds">Feeds</string>
    <string name="friends">Friends</string>
    <string name="groups">Groups</string>
    <string name="inbox">Inbox</string>
    <string name="notifications">Notification</string>
    <string name="say_whats_on_your_mind">Say what\'s on your mind...</string>
    <string name="comment_here">Comment here...</string>
    <string name="tap_anywhere_in_this_are_to_open_the_posts">Tap anywhere in this to open the post\'s</string>
    <string name="photo">Photo</string>
    <string name="location">Location</string>
    <string name="video">Video</string>
    <string name="activity">Activity</string>
    <string name="share_with_public_priavate">Share with Public/Private</string>
    <string name="validate">Validate</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="camera_not_support">Camera is not supported</string>
    <string name="post">Post</string>
    <string name="only_me">Only Me</string>
    <string name="site_members">Site Members</string>
    <string name="privacy_public">Public</string>
    <string name="privacy_public_detail">Can be seen by everyone, even if they are not members</string>
    <string name="privacy_friends_detail">Can be seen by your friends</string>
    <string name="privacy_only_detail">Can only be seen by you</string>
    <string name="privacy_site_member_detail">Can be seen by registered members</string>
    <string name="delete_photo_desc">Are you sure you want to delete this image?</string>
    <string name="enter_video_link">Enter Video url here...</string>
    <string name="done">Done</string>
    <string name="font_titillium_bold">Titillium-Bold.otf</string>
    <string name="font_titillium_light">Titillium-Light.otf</string>
    <string name="font_titillium_regular">Titillium-Regular.otf</string>
    <string name="font_titillium_semibold">Titillium-Semibold.otfe</string>
    <string name="username_validation">username must be 6 or more characters long</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="birthdate">Birthdate</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="cancel">Cancel</string>
    <string name="city">City/Town</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="about_me">About Me</string>
    <string name="error_msg">Some error found. Please try again</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="status">Status</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="unable_to_access_camera">Unable to access camera.</string>
    <string name="errorMsg">Message</string>
    <string name="unfriend">Unfriend</string>
    <string name="all_friends">All Friends</string>
    <string name="request_sent">Request Sent</string>
    <string name="pending_request">Pending Request</string>
    <string name="sent">Sent</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_photos">Add Photos</string>
    <string name="photo_limit">You cannot add more than 8 photos</string>
    <string name="location_search">Search Location</string>
    <string name="select_mood">Select Mood</string>
    <string name="no_internet">Please check internet connection.</string>
    <string name="mark_as_read">Mark as Read</string>
    <string name="delete">Delete</string>
    <string name="min">min ago</string>
    <string name="group_name">NAILS &amp; GLUE</string>
    <string name="join">Join Group</string>
    <string name="members">\nMembers</string>
    <string name="photos">\nPhotos</string>
    <string name="videos">\nVideos</string>
    <string name="views">\nViews</string>
    <string name="agree_term_condition">You must agree with the terms and conditions</string>
    <string name="feeling">Feeling:</string>
    <string name="select_activity">Select Activity</string>
    <string name="general">General</string>
    <string name="email_notification">Email &amp; Notifications</string>
    <string name="privacy_setting">Privacy Setting</string>
    <string name="save_change">Save Changes</string>
    <string name="block_ignore">Blocked &amp; Ignored</string>
    <string name="unblock">Unblock</string>
    <string name="ignored">Ignored</string>
    <string name="photos_">Photos:</string>
    <string name="friends_">Friends:</string>
    <string name="videos_">Videos:</string>
    <string name="my_group_list">My Group List:</string>
    <string name="apply_to_photo">Apply to all photos</string>
    <string name="apply_to_video">Apply to all videos</string>
    <string name="pref_public">Public</string>
    <string name="your_group">Your Groups:</string>
    <string name="activity_str_count_empty">Activity stream count is empty.</string>
    <string name="profile_url_empty">Profile url is empty.</string>
    <string name="activity_stream_item">Activity Stream Items:</string>
    <string name="allow_prof_like">Allow Profile Likes</string>
    <string name="show_online_sta">Show Online Status</string>
    <string name="profile_priv">Profile Privacy:</string>
    <string name="your_profile_url">Your Profile URL:</string>
    <string name="g_plate">Plate</string>
    <string name="g_photo">Photo</string>
    <string name="g_stage">Stage</string>
    <string name="g_motion">Motion</string>
    <string name="g_volunteer">Volunteer</string>
    <string name="g_tech">Tech</string>
    <string name="g_filter">Filter</string>
    <string name="g_real_estate">Real Estate</string>
    <string name="g_vpodium">Vlog</string>
    <string name="g_nails_glue">Nails &amp; Glue </string>
    <string name="new_friends_requests">"&lt;font color='#42B757'&gt;Albert finney&lt;/font&gt; send you a friend Request"</string>
    <string name="approved_friend_requests">"You are now friends with &lt;font color='#42B757'&gt;rachel Smith &lt;/font&gt;"</string>
    <string name="new_private_messages">"&lt;font color='#42B757'&gt;rachel Smith&lt;/font&gt; sent you a Private message."</string>
    <string name="new_stream_posts">"&lt;font color='#42B757'&gt;Jack Reacher&lt;/font&gt; posted in the&lt;font color='#42B757'&gt; Plate&lt;/font&gt;"</string>
    <string name="new_replies_for_stream_posts">"&lt;font color='#42B757'&gt;Samara Morgan&lt;/font&gt; replied to your &lt;font color='#42B757'&gt;stream&lt;/font&gt; comment"</string>
    <string name="new_profile_likes">"&lt;font color='#42B757'&gt;Samara Morgan&lt;/font&gt; liked your profile."</string>
    <string name="new_comments_on_stream_posts">"&lt;font color='#42B757'&gt;Kate Winslet&lt;/font&gt; has made a comment on your stream."</string>
    <string name="new_stream_posts_likes">"&lt;font color='#42B757'&gt;Emily Orianaa&lt;/font&gt; liked your post."</string>
    <string name="new_video_post">"&lt;font color='#42B757'&gt;Tom Steyer&lt;/font&gt; added a photo album in&lt;font color='#42B757'&gt;Nails &amp; Glue&lt;/font&gt; group"</string>
    <string name="new_images_posts">"&lt;font color='#42B757'&gt;jack Sparrow&lt;/font&gt; added a link in&lt;font color='#42B757'&gt;Nails &amp; Glue&lt;/font&gt; group"</string>
    <string name="profile">Profile</string>
    <string name="others">Others</string>
    <string name="photos_priv">Photos</string>
    <string name="video_priv">Videos</string>
    <string name="new_comment_on_stream_post">New Comments On Stream Posts </string>
    <string name="new_replies_for_stream_post">New Replies For Stream Posts </string>
    <string name="new_stream_post">New Stream Posts </string>
    <string name="new_profile_likes_privacy">New Profile Likes </string>
    <string name="new_stream_post_like">New Stream Posts Like</string>
    <string name="recv_digest_email">Receive Digest Email </string>
    <string name="new_friend_req">New Friends Requests </string>
    <string name="app_frie_req">Approved Friends Requests </string>
    <string name="new_priv_msg">New Private Message </string>
    <string name="grp_invit">Group invitations</string>
    <string name="desc_repl">Discussion replies</string>
    <string name="new_post_on_grp_stream">New posts on groups streams </string>
    <string name="new_grp_desc"> New group discussions</string>
    <string name="new_grp_announc">  New group announcements</string>
    <string name="new_grp_videos">New group videos</string>
    <string name="new_grp_events">New group events</string>
    <string name="new_grp_email_brod">New group email broadcasts</string>
    <string name="req_join_grp">Request to join group has been approved.</string>
    <string name="req_join_clos_grp">Requests to Join Closed Groups</string>
    <string name="grp_crea_rq_approv">Group creation request has been approved.</string>
    <string name="font_bold">OpenSans-Bold.ttf</string>
    <string name="font_regular">OpenSans-Regular.ttf</string>
    <string name="excellent_text">EXCELLENT, THANKS!</string>
    <string name="cnfrm_code_hint_text">CONFIRMATION CODE</string>
    <string name="cnfrm_code_text">We have received your request, we have sent you confirmation code. Please enter below </string>
    <string name="vrify_text">Verify</string>
    <string name="order_id">OrderID</string>
    <string name="order_status">Order Status</string>
    <string name="order_request">Order Request</string>
    <string name="order_amount">Order Amount</string>
    <string name="wait_time">Wait Time</string>
    <string name="order_receipt">Order Receipt</string>
    <string name="payment_option">Payment Option</string>
    <string name="delivery_option">Delivery Option</string>
    <string name="confirm">Confirm</string>
    <string name="recordBtn">Record</string>
    <string name="playBtn">Play</string>
    <string name="selectBtn">Select</string>
</resources>